# everland

./: .gitignore  AGENTS.md  db.py  main.py  pyproject.toml  run.sh  utils.py
.gh/: hosts.yml
.github/workflows/: ci.yml  claude-issue.yml  claude-pr.yml
docs/: game-dev.md  metadoc.md
games/: mafia.py
games/ladder/: __init__.py  game.py
games/mafia/: __init__.py  game.py
tests/: test_ladder_game.py  test_mafia_game.py
